<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Haystack</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="post_new_event">Post new event</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Events</string>
    <string name="app_label">Haystack</string>
    <string name="events_for">Events For</string>
    <string name="event_time">8:00 PM - 12:00 AM</string>
    <string name="event_title">Action Center</string>
    <string name="event_description">Half-off drinks on tuesdays</string>
    <string name="like_event">Like this event</string>
    <string name="event_name">Launch Event</string>
    <string name="comments">Comments</string>
    <string name="comment_hint">Comment\.\.\.</string>
    <string name="send">Send</string>
    <string name="event_address">5500 Wabash Ave Terre Haute, IN 47803</string>
    <string name="title_activity_post_new_event">Post New Event</string>
    <string name="title_text">Title</string>
    <string name="title_edittext_hint">Tab to enter title</string>
    <string name="date_text">Date</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="repeat_text">Repeat</string>
    <string name="category_text">Category</string>
    <string name="location_text">Location</string>
    <string name="description_text">Description</string>
    <string name="description_edittext_hint">Tap to enter description</string>
    <string name="date_picker">Pick a Date</string>
    <string name="time_picker">Time</string>
    <string name="address_edittext_hint">Tap to enter address</string>
    <string name="post_button_text">Post</string>
    <string name="comment_sent">Comment sent</string>
    <string name="update_events_menu">Update events</string>

    <string-array name="sort_spinner_array">
        <item>Newest</item>
        <item>Most Liked</item>
        <item>Trending</item>
        <item>Hot</item>
    </string-array>
    <string-array name="time_spinner_array">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>All Time</item>
    </string-array>
    <string-array name="category_spinner_array">
        <item>Food &amp; Drinks</item>
        <item>Entertainment</item>
        <item>Parties</item>
        <item>Meetings</item>
        <item>Other</item>
    </string-array>

    <string name="all">All</string>
    <string name="brandon">BRANDON</string>
    <string name="settings">Settings</string>
    <string name="_20_mile_radius">20 Mile Radius</string>
    <string name="_50_mile_radius">50 Mile Radius</string>
    <string name="_10_mile_radius">10 Mile Radius</string>
    <string name="_5_mile_radius">5 Mile Radius</string>
    <string name="search_radius">Search Radius</string>
    <string name="event_search_">Search Radius:</string>
    <string name="settings_activity">Settings Activity</string>
    <string name="likes_start">0 likes</string>
    <string name="distance">distance</string>
    <string name="_1f_miles_away">%.1f mi</string>
    <string name="entertainment">Entertainment</string>

</resources>