<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Black"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <TextView
            android:id="@+id/rowview_title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:text="@string/event_title"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rowview_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/event_time"
            android:textColor="#FFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rowview_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:text="@string/event_description"
            android:textColor="#FFF"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <ImageView
            android:id="@+id/rowview_rating"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/like_event"
            android:src="@android:drawable/btn_star_big_off" />

        <TextView
            android:id="@+id/num_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:text="@string/likes_start" />
        
    </LinearLayout>

</LinearLayout>